# antenna

backend/: app.py  default.env  helpers.py  load.py  pyproject.toml  settings.py
backend/assets/: 8935c8e5-ec77-421f-af86-d970583195f8.xlsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: index.css
