[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Meir <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
pyproj = "^3.6.1"
asyncpg = "^0.29.0"
fastapi = {extras = ["all"], version = "^0.109.2"}
googlemaps = "^4.10.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
